[gd_scene load_steps=15 format=2]

[ext_resource path="res://World/GrassBackground.png" type="Texture" id=1]
[ext_resource path="res://World/DirtPathTileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/DirtCliffTileMap.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/DoorPoint.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/ObjectiveUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/ShopKeeper.tscn" type="PackedScene" id=9]
[ext_resource path="res://Effects/Collectibles/Coin.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/DaggerUI.tscn" type="PackedScene" id=11]
[ext_resource path="res://Music and Sounds/derrick shop theme.wav" type="AudioStream" id=12]
[ext_resource path="res://World/TestRoom.gd" type="Script" id=13]
[ext_resource path="res://UI/CoinUI.tscn" type="PackedScene" id=14]

[node name="TestRoomDown" type="Node2D"]
script = ExtResource( 13 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 160, 90 )
scale = Vector2( 1.64286, 1.64286 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 208, 112 )

[node name="DirtPathTileMap" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( -65527, 0, 0, -65526, 0, 2, 9, 0, 65536, 10, 0, 65538, 65545, 0, 65536, 65546, 0, 65538, 131081, 0, 131072, 131082, 0, 131074, 327679, 0, 0, 262144, 0, 1, 262145, 0, 1, 262146, 0, 1, 262147, 0, 1, 262148, 0, 1, 262149, 0, 1, 262150, 0, 1, 262151, 0, 2, 262156, 0, 0, 262157, 0, 1, 262158, 0, 1, 262159, 0, 1, 262160, 0, 1, 262161, 0, 1, 262162, 0, 1, 262163, 0, 1, 262164, 0, 2, 393215, 0, 131072, 327680, 0, 131073, 327681, 0, 131073, 327682, 0, 131073, 327683, 0, 131073, 327684, 0, 131073, 327685, 0, 131073, 327686, 0, 131073, 327687, 0, 131074, 327692, 0, 131072, 327693, 0, 131073, 327694, 0, 131073, 327695, 0, 131073, 327696, 0, 131073, 327697, 0, 131073, 327698, 0, 131073, 327699, 0, 131073, 327700, 0, 131074, 393225, 0, 0, 393226, 0, 2, 458761, 0, 65536, 458762, 0, 65538, 524297, 0, 65536, 524298, 0, 65538, 589833, 0, 65536, 589834, 0, 65538, 655369, 0, 65536, 655370, 0, 65538, 720905, 0, 131072, 720906, 0, 131074 )

[node name="DirtCliffTileMap" parent="." instance=ExtResource( 6 )]
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 5, -65535, 0, 196609, -65534, 0, 196609, -65533, 0, 196610, -65530, 0, 196608, -65529, 0, 196609, -65528, 0, 196609, -65527, 0, 6, -65526, 0, 2, 65535, 0, 65540, 0, 0, 131074, 9, 0, 131072, 10, 0, 65543, 131071, 0, 131075, 65546, 0, 131075, 262143, 0, 3, 196618, 0, 3, 327679, 0, 65539, 262154, 0, 65539, 393215, 0, 196612, 327680, 0, 196609, 327681, 0, 196609, 327682, 0, 196609, 327683, 0, 196610, 327686, 0, 196608, 327687, 0, 196609, 327688, 0, 196609, 327689, 0, 196609, 327690, 0, 196615 )

[node name="Camera2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 19, 80 )

[node name="TopLeft" parent="Camera2D/Limits" index="0"]
position = Vector2( -11, -2 )

[node name="BottomRight" parent="Camera2D/Limits" index="1"]
position = Vector2( 331, 182 )

[node name="YSort" type="YSort" parent="."]

[node name="ShopKeeper" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 160, 70 )

[node name="Coin" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( 230, 58 )

[node name="Player" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 19, 80 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/Player"]
remote_path = NodePath("../../../Camera2D")

[node name="DoorPoint" parent="." instance=ExtResource( 7 )]
position = Vector2( -31, 78 )

[node name="DoorPoint4" parent="." instance=ExtResource( 7 )]
position = Vector2( 160, -24 )
rotation = 1.5708

[node name="DoorPoint2" parent="." instance=ExtResource( 7 )]
position = Vector2( 345, 80 )

[node name="DoorPoint3" parent="." instance=ExtResource( 7 )]
position = Vector2( 160, 201 )
rotation = 1.5708

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthUI" parent="CanvasLayer" instance=ExtResource( 4 )]
margin_left = 4.0
margin_top = 3.0
margin_right = 85.0
margin_bottom = 15.0

[node name="OrbUI" parent="CanvasLayer" instance=ExtResource( 8 )]
margin_left = 3.0
margin_top = 15.0
margin_right = 84.0
margin_bottom = 27.0

[node name="DaggerUI" parent="CanvasLayer" instance=ExtResource( 11 )]
margin_left = 271.0
margin_top = 3.0
margin_right = 352.0
margin_bottom = 19.0

[node name="CoinUI" parent="CanvasLayer" instance=ExtResource( 14 )]
margin_left = 271.0
margin_top = 20.0
margin_right = 270.88
margin_bottom = 19.98

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -2.0
autoplay = true
bus = "Music"

[editable path="Camera2D"]
